--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li><a class="nav-link scrollto" href="#about">QUIÉNES SOMOS</a></li>
         <li><a class="nav-link scrollto" href="#resume">CÓMO FUNCIONA</a></li>
         <li><a class="nav-link scrollto" href="#services">SOBRE LA APP</a></li>
-        <li><button type="button" class="btn btn-outline-light">Ir a la App</button></li>
+        <li><a href="https://diswallet-sx62.web.app/"><button type="button" class="btn btn-outline-light">Ir a la App</button></a></li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
     </nav><!-- .navbar -->
