--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
           <img src="assets/img/team-3.jpg" class="img-fluid" width="200"  alt="">
           <div class="member-info">
             <div class="member-info-content">
-              <h4>Ingeniería de Sistemas</h4>
-              <h6>CTO</h6>
+              <h4>Fabrizio Barra</h4>
+              <h6>Ingeniería de Sistemas</h6>
             </div>
             <div class="social">
               <i class="bi bi-github"></i> &nbsp; &nbsp;
